--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,158 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Etec
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <!-- Menu superior de cursos -->
+ <ion-row>
+    <ion-col size="12">
+
+      <ion-segment value="desenvolvimento_sistemas">
+        <ion-segment-button value="desenvolvimento_sistemas">
+          <ion-label>Desenvolvimento de Sistemas</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="informatica_internet">
+          <ion-label>Informática Internet</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="quimica">
+          <ion-label>Química</ion-label>
+        </ion-segment-button>
+      </ion-segment>
+
+    </ion-col>
+ </ion-row>
+
+<!-- Cards DS -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/52608/pexels-photo-52608.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Mobile</ion-card-title>
+        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+</ion-row>
+
+<!-- Cards Informática para internet -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3861972/pexels-photo-3861972.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>Bootstrap & Ionic</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/1181287/pexels-photo-1181287.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>HTML & CSS</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/6804581/pexels-photo-6804581.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Programação Web</ion-card-title>
+        <ion-card-subtitle>JavaScript & TypeScript</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+</ion-row>
+
+<!-- Cards Química -->
+<ion-row>
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3082451/pexels-photo-3082451.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Química</ion-card-title>
+        <ion-card-subtitle>Lorem ipsum dolor sit!</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3735780/pexels-photo-3735780.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Química</ion-card-title>
+        <ion-card-subtitle>Lorem ipsum dolor sit!</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+
+  <ion-col size="4">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3825462/pexels-photo-3825462.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+      <ion-card-header>
+        <ion-card-title>Química</ion-card-title>
+        <ion-card-subtitle>Lorem ipsum dolor sit!</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
+</ion-row>
+
 </ion-content>
+
+
