--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,10 +9,10 @@
 <ion-content [fullscreen]="true">
 
   <!-- Menu superior de cursos -->
- <ion-row>
+  <ion-row>
     <ion-col size="12">
 
-      <ion-segment value="desenvolvimento_sistemas">
+      <ion-segment value="desenvolvimento_sistemas" (ionChange)="selecionarCards($event)">
         <ion-segment-button value="desenvolvimento_sistemas">
           <ion-label>Desenvolvimento de Sistemas</ion-label>
         </ion-segment-button>
@@ -23,11 +23,12 @@
           <ion-label>Química</ion-label>
         </ion-segment-button>
       </ion-segment>
-
+      
     </ion-col>
- </ion-row>
-
-<!-- Cards DS -->
+  </ion-row>
+  
+  <!-- Cards DS -->
+<ng-container *ngIf="this.item_selecionado == 'desenvolvimento_sistemas'">
 <ion-row>
   <ion-col size="4">
     <ion-card>
@@ -41,7 +42,6 @@
       </ion-card-content>
     </ion-card>
   </ion-col>
-
   <ion-col size="4">
     <ion-card>
       <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
@@ -54,7 +54,6 @@
       </ion-card-content>
     </ion-card>
   </ion-col>
-
   <ion-col size="4">
     <ion-card>
       <img alt="Silhouette of mountains" src="https://images.pexels.com/photos/52608/pexels-photo-52608.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
@@ -68,8 +67,11 @@
     </ion-card>
   </ion-col>
 </ion-row>
+</ng-container>
+
 
 <!-- Cards Informática para internet -->
+<ng-container *ngIf="this.item_selecionado == 'informatica_internet'">
 <ion-row>
   <ion-col size="4">
     <ion-card>
@@ -110,8 +112,10 @@
     </ion-card>
   </ion-col>
 </ion-row>
+</ng-container>
 
 <!-- Cards Química -->
+<ng-container *ngIf="this.item_selecionado == 'quimica'">
 <ion-row>
   <ion-col size="4">
     <ion-card>
@@ -152,7 +156,6 @@
     </ion-card>
   </ion-col>
 </ion-row>
+</ng-container>
 
 </ion-content>
-
-
