--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,29 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+ion-content{
+  height: 100%;
+  width: 100%;
   margin: 0;
 }
 
-#container a {
-  text-decoration: none;
+.coluna{
+  margin-top: 3%;
 }
+
+#texto{
+  font-size: 50px;
+  font-weight: bold;
+}
+#img{
+  background-image: url("https://images.pexels.com/photos/6302137/pexels-photo-6302137.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+p{
+  margin-bottom: -1%;
+  margin-top: 2%;
+}
+ion-button{
+  width: 20%;
+}
+
