--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,98 +7,72 @@
  
 
   <ion-col size="12" size-lg="6" class="coluna" >
-
-    
-    <ion-row>
-      <ion-col >
-        <div class="ion-text-center">
-        <ion-label id="texto">Criar conta</ion-label> 
-      </div>
-      </ion-col>
-    </ion-row>
- 
-
-    <ion-list>
-      <ion-list>
-
-        <ion-row class="ion-justify-content-center">
-          <ion-col size = 6>
-            <ion-item class=>
-              <ion-input label="Nome"></ion-input>
-            </ion-item>
-            
+    <ion-row class="ion-justify-content-center ion-align-items-center" style="height:100%">
+      <ion-col size="10">  
+        <ion-row>
+          <ion-col >
+            <div class="ion-text-center">
+            <ion-label id="texto">Criar conta</ion-label> 
+            </div>
           </ion-col>
         </ion-row>
-
-
-        <ion-row class="ion-justify-content-center">
-          <ion-col size = 6>
+      
+        
+          <ion-list>
+            <ion-item>
+              <ion-input label="Nome"></ion-input>
+            </ion-item>
             <ion-item>
               <ion-input label="Email" type="email"></ion-input>
             </ion-item>
-          </ion-col>
-        </ion-row>
-        
-        <ion-row class="ion-justify-content-center">
-          <ion-col size = 6>
             <ion-item>
               <ion-input label="Senha" type="password" value="password"></ion-input>
           </ion-item>
-          </ion-col>
-        </ion-row>
-        
-        <ion-row class="ion-justify-content-center">
-          <ion-col size = 6>
             <ion-item>
               <ion-input label="Confirmar Senha" type="password" value="password"></ion-input>
             </ion-item>
+          </ion-list>
+        <ion-row>
+          <ion-col>
+            <div class="ion-text-center">
+            <ion-button color="success">Criar Conta</ion-button>
+          </div>
+        </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <div class="ion-text-center">
+            <p>Login com</p>
+          </div>
           </ion-col>
         </ion-row>
 
-      </ion-list>
-    </ion-list>
+        <ion-row>
+          <ion-col>
+            <div class="ion-text-center">
+            <ion-button class="face" color="tertiary">Facebook</ion-button>
+          </div>
+          </ion-col>
+        </ion-row>
 
-    <ion-row>
-      <ion-col>
-        <div class="ion-text-center">
-        <ion-button color="success">Criar Conta</ion-button>
-      </div>
-    </ion-col>
-    </ion-row>
+        <ion-row>
+          <ion-col>
+          <div class="ion-text-center">
+            <ion-button color="secondary">Twitter</ion-button>
+          </div>
+          </ion-col>
+        </ion-row>
 
-    <ion-row>
-      <ion-col>
-        <div class="ion-text-center">
-        <p>Login com</p>
-      </div>
+        <ion-row>
+          <ion-col>
+            <div class="ion-text-center">
+            <ion-button color="danger">Google</ion-button>
+          </div>
+          </ion-col>
+        </ion-row>
       </ion-col>
     </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <div class="ion-text-center">
-        <ion-button class="face" color="tertiary">Facebook</ion-button>
-      </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-      <div class="ion-text-center">
-        <ion-button color="secondary">Twitter</ion-button>
-      </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <div class="ion-text-center">
-        <ion-button color="danger">Google</ion-button>
-      </div>
-      </ion-col>
-    </ion-row>
-    
-
   </ion-col>
 </ion-row>
 
