--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,79 +1,80 @@
+<ion-header>
+    <ion-toolbar>
+        <ion-title>
+            Calendário
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
 
-<ion-row>
-  <ion-col id="img" size="12" size-lg="6" >
-    
-  </ion-col>
- 
+<ion-row class="ion-justify-content-center calendario">
+    <ion-col size="6" class="ion-text-center">
 
-  <ion-col size="12" size-lg="6" class="coluna" >
-    <ion-row class="ion-justify-content-center ion-align-items-center" style="height:100%">
-      <ion-col size="10">  
         <ion-row>
-          <ion-col >
-            <div class="ion-text-center">
-            <ion-label id="texto">Criar conta</ion-label> 
-            </div>
-          </ion-col>
-        </ion-row>
-      
-        
-          <ion-list>
-            <ion-item>
-              <ion-input label="Nome"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input label="Email" type="email"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input label="Senha" type="password" value="password"></ion-input>
-          </ion-item>
-            <ion-item>
-              <ion-input label="Confirmar Senha" type="password" value="password"></ion-input>
-            </ion-item>
-          </ion-list>
-        <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-            <ion-button color="success">Criar Conta</ion-button>
-          </div>
-        </ion-col>
+            <ion-col size="12">
+                <img src="{{ this.calendario.foto }}" class="calendario__foto">
+            </ion-col>
         </ion-row>
 
         <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-            <p>Login com</p>
-          </div>
-          </ion-col>
+            <ion-col size="6"> 
+                <ion-label class="calendario__mes">{{ this.calendario.mes }}</ion-label>
+            </ion-col>
+            <ion-col size="6">
+                <ion-label class="calendario__ano">{{ this.calendario.ano }}</ion-label>
+            </ion-col>
         </ion-row>
 
         <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-            <ion-button class="face" color="tertiary">Facebook</ion-button>
-          </div>
-          </ion-col>
+            <ng-container *ngFor="let dia_semana of this.calendario.dias_da_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia-semana">{{dia_semana}}</ion-label>
+                </ion-col>
+            </ng-container>   
         </ion-row>
 
         <ion-row>
-          <ion-col>
-          <div class="ion-text-center">
-            <ion-button color="secondary">Twitter</ion-button>
-          </div>
-          </ion-col>
+            <ng-container *ngFor="let dia of this.calendario.primeira_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia">{{ dia }}</ion-label>
+                </ion-col>
+            </ng-container>
         </ion-row>
 
         <ion-row>
-          <ion-col>
-            <div class="ion-text-center">
-            <ion-button color="danger">Google</ion-button>
-          </div>
-          </ion-col>
+            <ng-container *ngFor="let dia of this.calendario.segunda_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia">{{ dia }}</ion-label>
+                </ion-col>
+            </ng-container>
         </ion-row>
-      </ion-col>
-    </ion-row>
-  </ion-col>
+
+        <ion-row>
+            <ng-container *ngFor="let dia of this.calendario.terceira_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia">{{ dia }}</ion-label>
+                </ion-col>
+            </ng-container>
+        </ion-row>
+
+        <ion-row>
+            <ng-container *ngFor="let dia of this.calendario.quarta_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia">{{ dia }}</ion-label>
+                </ion-col>
+            </ng-container>
+        </ion-row>
+
+        <ion-row>
+            <ng-container *ngFor="let dia of this.calendario.quinta_semana">
+                <ion-col>
+                    <ion-label class="calendario__dia">{{ dia }}</ion-label>
+                </ion-col>
+            </ng-container>
+        </ion-row>
+
+    </ion-col>
 </ion-row>
 
 </ion-content>
