css mais elaborado

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,13 +17,13 @@
             </ion-col>
         </ion-row>
 
-        <ion-row>
+        <ion-row class="linha_mesano">
             <ion-col size="6"> 
                 <ion-label class="calendario__mes">{{ this.calendario.mes }}</ion-label>
             </ion-col>
-            <ion-col size="6">
+             <ion-col size="6">
                 <ion-label class="calendario__ano">{{ this.calendario.ano }}</ion-label>
-            </ion-col>
+            </ion-col> 
         </ion-row>
 
         <ion-row>
