--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+<div class="calender">
 <ion-row class="ion-justify-content-center calendario">
     <ion-col size="6" class="ion-text-center">
 
@@ -76,5 +76,5 @@
 
     </ion-col>
 </ion-row>
-
+</div>
 </ion-content>
