--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,14 +1,16 @@
 .calendario{
   &__foto{
-    margin-left: -1rem;
+    margin-left: -0.2rem;
     height: 33rem;
     width: 47.8rem;;
   }
 
   &__mes{
+    margin-left: -0.2rem;
     font-size: 1rem;
     color: white;
     width: 150px;
+    text-align: center;
   }
 
   &__ano{
@@ -35,4 +37,6 @@
 
 .calender{
   background-color: #150326;
+  width: 50rem;
+
 }
