--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,9 +7,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<div class="calender">
+
 <ion-row class="ion-justify-content-center calendario">
-    <ion-col size="6" class="ion-text-center">
+    <ion-col size="6" class="ion-text-center" class="calender">
 
         <ion-row>
             <ion-col size="12">
@@ -76,5 +76,5 @@
 
     </ion-col>
 </ion-row>
-</div>
+
 </ion-content>
