--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,159 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+<ion-row class="ion-justify-content-center">
+    <ion-col size="10" size-lg="5" class="ion-text-center">
+
+        <!-- cabeçalho -->
+        <ion-row>
+            <!-- coluna da esquerda -->
+            <ion-col size="4" class="">
+                <img src="{{ this.perfil.foto_perfil }}">
+            </ion-col>
+    
+            <!-- coluna da direta -->
+            <ion-col size="8">
+                <ion-row>
+                    <ion-col size="12">
+                        <ion-label>{{ this.perfil.nome }}</ion-label>
+                    </ion-col>
+                </ion-row>
+    
+                <ion-row>
+                    <ion-col size="12">
+                        <ion-label>{{ this.perfil.profissao }}</ion-label>
+                    </ion-col>
+                </ion-row>
+    
+                <ion-row>
+                    <ion-col size="6">
+                        <ion-button expand="full" shape="round" color="primary" (click)="setSeguir()">{{ this.seguir_status }}</ion-button>
+                    </ion-col>
+                    <ion-col size="6">
+                        <ion-button expand="full" shape="round" color="secondary" routerLink="/mensagem">Mensagem</ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+    
+        <!-- métricas sociais -->
+        <ion-row>
+        <!-- curtidas -->
+        <ion-col size="4">
+            <ion-row>
+            <ion-col size="12" class="ion-text-center">
+                <ion-label>{{ this.metricas_sociais.curtidas }}</ion-label>
+            </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col size="12" class="ion-text-center">
+                <ion-label>Curtidas</ion-label>
+            </ion-col>
+            </ion-row>
+        </ion-col>
+
+        <!-- Seguidores -->
+        <ion-col size="4">
+            <ion-row>
+            <ion-col size="12" class="ion-text-center">
+                <ion-label>{{ this.metricas_sociais.seguidores }}</ion-label>
+            </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col size="12" class="ion-text-center">
+                <ion-label>Seguindo</ion-label>
+            </ion-col>
+            </ion-row>
+        </ion-col>
+
+        <!-- Amigos -->
+        <ion-col size="4">
+            <ion-row>
+            <ion-col size="12" class="ion-text-center">
+                <ion-label>{{ this.metricas_sociais.amigos }}</ion-label>
+            </ion-col>
+            </ion-row>
+
+            <ion-row>
+                <ion-col size="12" class="ion-text-center">
+                <ion-label>Amigos</ion-label>
+            </ion-col>
+            </ion-row>
+         </ion-col>
+        </ion-row>
+
+        <!-- linha divisão -->
+        <ion-row>
+            <ion-col size="12">
+                <ion-item-divider></ion-item-divider>
+            </ion-col>
+        </ion-row>
+
+        <!-- sobre -->
+        <ion-row>
+            <ion-col size="12" class="ion-text-start">Sobre</ion-col>
+            <ion-col size="12" class="ion-text-start">{{ this.perfil.biografia }}</ion-col>
+        </ion-row>
+
+        <!-- linha divisão -->
+        <ion-row>
+            <ion-col size="12">
+                <ion-item-divider></ion-item-divider>
+            </ion-col>
+        </ion-row>
+
+        <!-- Postagens de amigos -->
+        <ion-row>
+            <ion-col size="12" class="ion-text-start">
+                <ion-label>Postagens de amigos</ion-label>
+            </ion-col>
+        </ion-row>
+
+        <!-- Postagens -->
+        <ng-container *ngFor="let post of this.postagens">
+            <ion-row>
+                <ion-col size="4">
+                    <ion-avatar>
+                        <ng-container *ngIf="post.perfil.foto">
+                        <img src="{{ post.perfil.foto }}">
+                        </ng-container>
+    
+                        <ng-container *ngIf="!post.perfil.foto">
+                        <img src="https://cdn1.iconfinder.com/data/icons/user-avatar-20/64/01-business_man_avatar-512.png">
+                        </ng-container>
+                    </ion-avatar>
+                </ion-col>
+    
+                <ion-col size="8">
+                    <ion-row>
+                        <ion-col size="auto" class="ion-text-start"><ion-label>{{ post.perfil.nome }}</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>{{ post.perfil.mencao_perfil }}</ion-label></ion-col>
+                    </ion-row>
+
+                    <ion-row>
+                        <ion-col size="12" class="ion-text-start">
+                            <ion-label>{{ post.postagem.mensagem}}</ion-label>
+                        </ion-col>
+                    </ion-row>
+    
+                    <ng-container *ngIf="post.postagem.foto">
+                        <ion-row>
+                                <ion-col size="12">
+                                    <img src="{{post.postagem.foto}}">
+                                </ion-col>
+                            </ion-row>
+
+                    </ng-container>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col size='12'>
+                <ion-item-divider></ion-item-divider>
+                </ion-col>
+            </ion-row>
+        </ng-container>
+    </ion-col>
+</ion-row>
+
 </ion-content>
