--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,95 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ 
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
+    <!-- resultado -->
+    <div class="resultado">
+    <ion-row>
+      <ion-col size="12">
+        <ion-input type="text" id="resultado" disabled></ion-input>
+      </ion-col>
+    </ion-row>
+    </div>
+
+    <div class="botoes ion-justify-content-center">
+    <!-- linha 1 -->
+    <ion-row>
+      <ion-col>
+        <ion-button color="danger">AC</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button color="danger">DEL</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button color="light">%</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button color="light">/</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <!-- linha 2 -->
+    <ion-row>
+      <ion-col>
+        <ion-button>7</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>8</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>9</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button color="light">x</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <!-- linha 3 -->
+    <ion-row>
+      <ion-col>
+        <ion-button>4</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>5</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>6</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button color="light">-</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <!-- linha 4 -->
+    <ion-row>
+      <ion-col>
+        <ion-button>1</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>2</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button>3</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button color="light">+</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <!-- linha 5 -->
+    <ion-row>
+      <ion-col >
+        <ion-button color="light">+/-</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button>0</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button>.</ion-button>
+      </ion-col>
+      <ion-col >
+        <ion-button color="danger">=</ion-button>
+      </ion-col>
+    </ion-row>
   </div>
+
 </ion-content>
