--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,17 @@
-#container {
-  text-align: center;
+// #A1A2A6 -> cinza claro
+// #585859 -> cinza escuro
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.resultado{
+  background-color: #A1A2A6;
+  height: 30vh;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.botoes{
+  background-color: #585859;
+  height: 70vh;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-button{
+  width: 20vw;
 }
 
-#container a {
-  text-decoration: none;
-}
