tentando arrumar css

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,13 +5,12 @@
   background-color: #A1A2A6;
   height: 30vh;
 }
-
-.botoes{
+.teclas{
   background-color: #585859;
   height: 70vh;
 }
-
 ion-button{
   width: 20vw;
+  height:10vh;
 }
 
