--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,14 +5,19 @@
     <div class="resultado">
     <ion-row>
       <ion-col size="12">
-        <ion-input type="text" id="resultado" disabled></ion-input>
+        <ion-input type="text" id="resultado" disabled>A</ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-input type="text" id="resultado" disabled>A</ion-input>
       </ion-col>
     </ion-row>
     </div>
 
-    <div class="botoes ion-justify-content-center">
+    <div class="teclas">
     <!-- linha 1 -->
-    <ion-row>
+    <ion-row class="botao">
       <ion-col>
         <ion-button color="danger">AC</ion-button>
       </ion-col>
@@ -28,7 +33,7 @@
     </ion-row>
 
     <!-- linha 2 -->
-    <ion-row>
+    <ion-row class="botao">
       <ion-col>
         <ion-button>7</ion-button>
       </ion-col>
@@ -44,7 +49,7 @@
     </ion-row>
 
     <!-- linha 3 -->
-    <ion-row>
+    <ion-row class="botao">
       <ion-col>
         <ion-button>4</ion-button>
       </ion-col>
@@ -60,7 +65,7 @@
     </ion-row>
 
     <!-- linha 4 -->
-    <ion-row>
+    <ion-row class="botao">
       <ion-col>
         <ion-button>1</ion-button>
       </ion-col>
@@ -76,7 +81,7 @@
     </ion-row>
 
     <!-- linha 5 -->
-    <ion-row>
+    <ion-row class="botao">
       <ion-col >
         <ion-button color="light">+/-</ion-button>
       </ion-col>
@@ -91,5 +96,4 @@
       </ion-col>
     </ion-row>
   </div>
-
 </ion-content>
