--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     <div class="resultado">
     <ion-row>
       <ion-col size="12">
-        <ion-input type="text" id="resultado" disabled>A</ion-input>
+        <ion-input type="text" id="tela" disabled>{{this.tela}}</ion-input>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -19,64 +19,64 @@
     <!-- linha 1 -->
     <ion-row class="botao">
       <ion-col>
-        <ion-button color="danger">AC</ion-button>
+        <ion-button color="danger" (click)="limparTela()">AC</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button color="danger">DEL</ion-button>
+        <ion-button color="danger" (click)="del()">DEL</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button color="light">%</ion-button>
+        <ion-button color="light" (click)="setTecla('%')">%</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button color="light">/</ion-button>
+        <ion-button color="light" (click)="setTecla('/')">/</ion-button>
       </ion-col>
     </ion-row>
 
     <!-- linha 2 -->
     <ion-row class="botao">
       <ion-col>
-        <ion-button>7</ion-button>
+        <ion-button (click)="setTecla('7')">7</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>8</ion-button>
+        <ion-button (click)="setTecla('8')">8</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>9</ion-button>
+        <ion-button (click)="setTecla('9')">9</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button color="light">x</ion-button>
+        <ion-button color="light" (click)="setTecla('*')">x</ion-button>
       </ion-col>
     </ion-row>
 
     <!-- linha 3 -->
     <ion-row class="botao">
       <ion-col>
-        <ion-button>4</ion-button>
+        <ion-button (click)="setTecla('4')">4</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>5</ion-button>
+        <ion-button (click)="setTecla('5')">5</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>6</ion-button>
+        <ion-button (click)="setTecla('6')">6</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button color="light">-</ion-button>
+        <ion-button color="light" (click)="setTecla('-')">-</ion-button>
       </ion-col>
     </ion-row>
 
     <!-- linha 4 -->
     <ion-row class="botao">
       <ion-col>
-        <ion-button>1</ion-button>
+        <ion-button (click)="setTecla('1')">1</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>2</ion-button>
+        <ion-button (click)="setTecla('2')">2</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button>3</ion-button>
+        <ion-button (click)="setTecla('3')">3</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button color="light">+</ion-button>
+        <ion-button color="light" (click)="setTecla('+')">+</ion-button>
       </ion-col>
     </ion-row>
 
@@ -86,13 +86,13 @@
         <ion-button color="light">+/-</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button>0</ion-button>
+        <ion-button (click)="setTecla('0')">0</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button>.</ion-button>
+        <ion-button (click)="setTecla('.')">.</ion-button>
       </ion-col>
       <ion-col >
-        <ion-button color="danger">=</ion-button>
+        <ion-button color="danger" (click)="calc()">=</ion-button>
       </ion-col>
     </ion-row>
   </div>
