--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,15 +1,67 @@
 // #A1A2A6 -> cinza claro
 // #585859 -> cinza escuro
 
+.resultado, .teclas{
+  margin-left: 45vh;
+  margin-top: 10vh;
+}
+
 .resultado{
-  background-color: #A1A2A6;
-  height: 30vh;
+  width: 100vh;
+  height: 40vh;
+  border-radius: 10px;
+  background-image: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );
 }
+
+#tela, #resultado{
+  margin-left: 30px;
+}
+
+#tela{
+  font-size: 70px;
+  color: white;
+}
+
+
+#resultado{
+  font-size: 50px;
+  color: white;
+  margin-top: -40px;
+}
+
 .teclas{
-  background-color: #585859;
-  height: 70vh;
+  margin-top: -10vh;
+  background-color: #242424;
+  width: 100vh;
+  min-height: 50vh;
+  border-radius: 10px;
 }
-ion-button{
-  width: 20vw;
-  height:8vh;
+
+ion-button {
+  border-radius: 10px;
+  font-size: 3vh;
+  width: 8vw;
+  height:7vh;
+  margin-top: 1.2vh;
+  margin-left: 3vh;
+}
+
+.btnn{
+  --background: none;
+  --box-shadow: none;
+  --ripple-color: #01DA8B;
+}
+
+.btnSinal{
+  --background: #181818;
+  --ripple-color: #01DA8B;
+}
+
+.danger{
+  --background: #ac2525;
+  --ripple-color: #01DA8B;
+}
+
+.btnIgual{
+  --background: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );
 }
