--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,7 +10,7 @@
   width: 100vh;
   height: 40vh;
   border-radius: 10px;
-  background-image: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );
+  background-image: linear-gradient( 109.6deg,  rgb(67, 68, 68) 11.2%, rgba(96,221,142,1) 91.1% );
 }
 
 #tela, #resultado{
@@ -63,5 +63,129 @@ ion-button {
 }
 
 .btnIgual{
-  --background: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );
+    --background: linear-gradient( 109.6deg,  rgb(67, 68, 68) 11.2%, rgba(96,221,142,1) 91.1% );
+}
+
+/* mobile  */
+@media only screen and (max-width: 600px){
+
+  .resultado, .teclas{
+    margin-left: 0vh;
+    margin-top: 0vh;
+  }
+  
+  .resultado{
+    width: auto;
+    height: 50vh;
+    border-radius: 0px;
+  }
+  
+  #tela, #resultado{
+     margin-left: 10px;
+  }
+  
+  #tela{
+    font-size: 50px;
+    color: white;
+  }
+  
+  #resultado{
+    font-size: 40px;
+    color: white;
+    margin-top: -40px;
+  }
+  
+  .teclas{
+    margin-top: -15vh;
+    background-color: #242424;
+    width: auto;
+    min-height: auto;
+    border-radius: 10px;
+  }
+  
+  ion-button {
+    border-radius: 10px;
+    width: 10vh;
+    height: 10vh;
+    margin-top: 1vh;
+    margin-left: 1.05vh;
+    font-size: 16px;
+  }
+}
+
+@media only screen and (width: 414px) and (height: 896px){
+
+  .resultado, .teclas{
+    margin-left: 0vh;
+    margin-top: 0vh;
+  }
+  
+  .resultado{
+    width: auto;
+    height: 50vh;
+    border-radius: 0px;
+  }
+  
+  #tela, #resultado{
+     margin-left: 10px;
+  }
+  
+  #tela{
+    font-size: 50px;
+    color: white;
+  }
+  
+  #resultado{
+    font-size: 40px;
+    color: white;
+    margin-top: -40px;
+  }
+  
+  .teclas{
+    margin-top: -15vh;
+    background-color: #242424;
+    width: auto;
+    min-height: auto;
+    border-radius: 10px;
+  }
+  
+  ion-button {
+    border-radius: 10px;
+    width: 9.1vh;
+    height: 9.1vh;
+    margin-top: 1vh;
+    margin-left: 1.05vh;
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 720px) and (min-width: 601px){
+
+  .resultado, .teclas{
+    margin-left: 45vh;
+    margin-top: 4vh;
+  }
+
+  .teclas{
+    margin-top: -10vh;
+    background-color: #242424;
+    width: 100vh;
+    min-height: 50vh;
+    border-radius: 10px;
+  }
+
+  #tela{
+    font-size: 30px;
+    color: white;
+  }
+  
+  #resultado{
+    font-size: 20px;
+    color: white;
+    margin-top: -30px;
+  }
+
+  #tela, #resultado{
+    margin-left: 6px;
+ }
 }
