--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,42 +1,103 @@
-<ion-button class="btnn" (click)="setTecla('6')">6</ion-button>
-</ion-col>
-<ion-col>
-  <ion-button class="btnSinal" (click)="setTecla('-')">-</ion-button>
-</ion-col>
-</ion-row>
+<ion-content [fullscreen]="true">
 
-<!-- linha 4 -->
-<ion-row class="botao">
-<ion-col>
-  <ion-button class="btnn" (click)="setTecla('1')">1</ion-button>
-</ion-col>
-<ion-col>
-  <ion-button class="btnn" (click)="setTecla('2')">2</ion-button>
-</ion-col>
-<ion-col>
-  <ion-button class="btnn" (click)="setTecla('3')">3</ion-button>
-</ion-col>
-<ion-col>
-  <ion-button class="btnSinal" (click)="setTecla('+')">+</ion-button>
-</ion-col>
-</ion-row>
+  <!-- <ion-row class="calculadora"> -->
+  <div class="body">
+    <!-- resultado -->
+    <div class="resultado">
+     <ion-row>
+       <ion-col size="12">
+         <ion-input type="text" id="tela" disabled>{{this.tela}}</ion-input>
+       </ion-col>
+     </ion-row>
+     <ion-row>
+       <ion-col size="12">
+         <ion-input type="text" id="resultado" disabled>{{this.resultado}}</ion-input>
+       </ion-col>
+     </ion-row>
+    </div>
 
-<!-- linha 5 -->
-<ion-row class="botao">
-<ion-col >
-  <ion-button class="btnSinal" (click)="trocaSinal()">+/-</ion-button>
-</ion-col>
-<ion-col >
-  <ion-button class="btnn" (click)="setTecla('0')">0</ion-button>
-</ion-col>
-<ion-col >
-  <ion-button class="btnSinal" (click)="setTecla('.')">.</ion-button>
-</ion-col>
-<ion-col >
-  <ion-button class="btnIgual" (click)="calc()" >=</ion-button>
-</ion-col>
-</ion-row>
-</div>
+
+    <div class="teclas">
+      <!-- linha 1 -->
+      <ion-row class="botao">
+        <ion-col>
+          <ion-button class="danger" (click)="limparTela()">AC</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="danger" (click)="del()"><ion-icon name="backspace"></ion-icon></ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="porcentagem()">%</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="setTecla('/')">/</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <!-- linha 2 -->
+      <ion-row class="botao">
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('7')">7</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('8')">8</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('9')">9</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="setTecla('*')">x</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <!-- linha 3 -->
+      <ion-row class="botao">
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('4')">4</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('5')">5</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('6')">6</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="setTecla('-')">-</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <!-- linha 4 -->
+      <ion-row class="botao">
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('1')">1</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('2')">2</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('3')">3</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="setTecla('+')">+</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <!-- linha 5 -->
+      <ion-row class="botao">
+        <ion-col>
+          <ion-button class="btnSinal" (click)="trocaSinal()">+/-</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnn" (click)="setTecla('0')">0</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnSinal" (click)="setTecla('.')">.</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="btnIgual" (click)="calc()" >=</ion-button>
+        </ion-col>
+      </ion-row>
+    </div>
 </div>
 </ion-content>
 <!-- feito por Pedro e Thay -->
