--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,13 +5,13 @@
     <!-- resultado -->
     <div class="resultado">
      <ion-row>
-       <ion-col size="12">
-         <ion-input type="text" id="tela" disabled>{{this.tela}}</ion-input>
+       <ion-col size="12" class="ion-text-end">
+         <ion-label id="tela"  >{{this.tela}}</ion-label>
        </ion-col>
      </ion-row>
      <ion-row>
-       <ion-col size="12">
-         <ion-input type="text" id="resultado" disabled>{{this.resultado}}</ion-input>
+       <ion-col size="12" class="ion-text-end" >
+         <ion-label id="resultado">{{this.resultado}}</ion-label>
        </ion-col>
      </ion-row>
     </div>
